--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2018"
 license = "WTFPL"
 publish = false
 
+[features]
+no-entrypoint = []
+
 [dependencies]
 solana-program = "=1.7.11"
+thiserror = "1.0.24"
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
 
-[dev-dependencies]
-assert_matches = "1.4.0"
-solana-program-test = "=1.7.11"
-solana-sdk = "=1.7.11"
-solana-validator = "=1.7.11"
 
 [lib]
 crate-type = ["cdylib", "lib"]
